# 3d-controller-overlay

./: CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
cmake/ports/sdl3/: portfile.cmake
models/DualSense/: info.txt
models/DualShock 4/: info.txt
models/Gamecube/: info.txt
models/Joycon Grip/: info.txt
models/Left Joycon/: info.txt
models/Right Joycon/: info.txt
models/Steam Controller/: info.txt  license.txt  license_attribution.txt
models/Switch Pro/: info.txt
models/Xbox One/: info.txt
res/: 3dco.desktop  version.rc.in  window_icon.h
src/: CMakeLists.txt  config.h.in  controller_window.cpp  controller_window.h  main.cpp  model.cpp  model.h  settings.cpp  settings_window.cpp  settings_window.h  shader.cpp  shader.h  strings_3dco.h
