add_executable(${PROJECT_SHORTNAME}
    controller_window.cpp
    controller_window.h
    cube_info.h
    main.cpp
    model.cpp
    model.h
    settings_window.cpp
    settings_window.h
    settings.cpp
    settings.h
    shader_source.h
    shader.cpp
    shader.h
    shaders.h
    strings_3dco.h
)
